@@ -1,4 +1,4 @@
 DIST hnb-1.9.18.tar.gz 166043 RMD160 d2a5da7a5501d83630074703de12fbff6eb3df09 SHA1 dde18ce916cec31d473ac7f95f5106b120422854 SHA256 b9a1e567d904dc9d3eb262e4f6fd46a4494339452333c35d77e154c7b0d5031f
-EBUILD hnb-1.9.18.ebuild 576 RMD160 9d9793be599aa5a886819f25e56bdcec5fc9bc81 SHA1 0a7ee90b898651fa226a734829d7c94c14beae21 SHA256 bdbe37e86c2edfd316bb72a10ae1fbf7237d9c064e05fb810b4e4271a115f769
-MISC ChangeLog 1847 RMD160 19eb12d6b6d727ad3fe1ab79f69aa056fce6fbcb SHA1 d7b2bcb93b2c6fadb0287e4a988dacdb552b2340 SHA256 b333413e4003377d8f46763987dc1d20cedb342cc0d46825e2b3d4fddbce565a
+EBUILD hnb-1.9.18.ebuild 629 RMD160 e3a07b6577e8341ac168cc58f05787e2c691a970 SHA1 151a292a8995837f1bce07284d3eeef2b7108360 SHA256 ba46d4463b36f0fa0eb0e50ebceefe598b04cfc7d5d753d5595c47096758c985
+MISC ChangeLog 1983 RMD160 fdfcc2805d47b58ad24e934e9cd10b2cb7dc3a1a SHA1 76c21f9bb929e3751d1db6149aad9f865ba217a5 SHA256 71ee42b97e20cf23c2023b2d3c3f463871f3f971a371783d0a4860dc0920897b
 MISC metadata.xml 517 RMD160 666ee03634660440df9f4520af06c83da1c5cf97 SHA1 b60dd709e2d2924594843e1bfb5e2043a172bb3b SHA256 846bc7fd7e9c81b772e323e60ac25cebe78e8c16f255c4e73b21f158324678b3
