@@ -1,6 +1,10 @@
 # ChangeLog for app-text/hnb
-# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/hnb/ChangeLog,v 1.18 2008/01/17 20:06:30 grobian Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/hnb/ChangeLog,v 1.19 2009/07/23 22:31:07 vostorga Exp $
+
+  23 Jul 2009; Víctor Ostorga <vostorga@gentoo.org> hnb-1.9.17.ebuild,
+  hnb-1.9.18.ebuild:
+  Fixing CC variable, closes bug #243730
 
   17 Jan 2008; Fabian Groffen <grobian@gentoo.org> metadata.xml,
   hnb-1.9.17.ebuild, hnb-1.9.18.ebuild:
